# tinyos-main

support/make/extras/: sim.extra
tools/: configure.ac
tools/tinyos/c/sf/: Makefile.am
tools/tinyos/java/net/tinyos/message/: Makefile.am
tools/tinyos/java/net/tinyos/packet/: Makefile.am
tools/tinyos/java/net/tinyos/tools/: Makefile.am
tools/tinyos/jni/env/: Makefile.am
tools/tinyos/jni/serial/: Makefile.am
tools/tinyos/misc/: tos-locate-jre
tools/tinyos/python/message/: Makefile.am
tools/tinyos/python/packet/: Makefile.am
